namespace java com.igool.rpc.db.model.thrift
struct BusinessTypeInfo {
			1:i32 businessTypeId,
			2:string businessType,
			3:string createDate,
			4:i32 versions,
			5:string name
	}